:green_heart: Re-migrate database for phpunit tests

--- a/.github/workflows/cms-ci.yml
+++ b/.github/workflows/cms-ci.yml
@@ -49,6 +49,7 @@ jobs:
         run: |
           ./vendor/bin/testbench migrate:fresh
           ./vendor/bin/testbench migrate:rollback
+          ./vendor/bin/testbench migrate
         env:
           DB_PORT: 32574
 
