--- a/src/Modules/Newsletter/package.json
+++ b/src/Modules/Newsletter/package.json
@@ -12,6 +12,7 @@
     "devDependencies": {
         "cross-env": "^5.0.0",
         "laravel-mix": "^1.0",
-        "laravel-nova": "^1.0"
+        "laravel-nova": "^1.0",
+        "jquery": "^3.5.1"
     }
 }
