--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "jquery": "^3.3.1",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
+        "node": "^14.16.0",
+        "npm": "^7.6.3",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
@@ -31,9 +33,9 @@
         "@fortawesome/vue-fontawesome": "^0.1.9",
         "dropzone": "^5.7.0",
         "flag-icon-css": "^3.4.6",
-        "vue-flag-icon": "^1.0.6",
         "lang.js": "^1.1.14",
-        "vue-toasted": "^1.1.27",
-        "vue-multiselect": "^2.1.6"
+        "vue-flag-icon": "^1.0.6",
+        "vue-multiselect": "^2.1.6",
+        "vue-toasted": "^1.1.27"
     }
 }
