:heavy_plus_sign: Add vue-toasted

--- a/src/nova-components/MenuItemField/package.json
+++ b/src/nova-components/MenuItemField/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
         "vue": "^2.5.0",
         "vue-multiselect": "^2.1.4",
+        "vue-toasted": "^1.1.28",
         "vuedraggable": "^2.20.0"
     }
 }
