:bug: Fix nova-components composer namespaces

--- a/src/nova-components/GalleryItemField/composer.json
+++ b/src/nova-components/GalleryItemField/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "webid/GalleryItemField",
+    "name": "webid/gallery-item-field",
     "description": "A Laravel Nova field.",
     "keywords": [
         "laravel",
