--- a/src/nova-components/MenuItemField/composer.json
+++ b/src/nova-components/MenuItemField/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "webid/MenuItemField",
+    "name": "webid/menu-item-field",
     "description": "A Laravel Nova field.",
     "keywords": [
         "laravel",
