--- a/src/nova-components/MenuTool/composer.json
+++ b/src/nova-components/MenuTool/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "webid/MenuTool",
+    "name": "webid/menu-tool",
     "description": "A Laravel Nova field.",
     "keywords": [
         "laravel",
