--- a/src/nova-components/ImageItemField/composer.json
+++ b/src/nova-components/ImageItemField/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "webid/ImageItemField",
+    "name": "webid/image-item-field",
     "description": "A Laravel Nova field.",
     "keywords": [
         "laravel",
