--- a/src/nova-components/MenuItemField/package.json
+++ b/src/nova-components/MenuItemField/package.json
@@ -18,6 +18,9 @@
         "vue": "^2.5.0",
         "vue-multiselect": "^2.1.4",
         "vue-toasted": "^1.1.28",
-        "vuedraggable": "^2.20.0"
+        "vuedraggable": "^2.20.0",
+        "@fortawesome/fontawesome-svg-core": "^1.2.26",
+        "@fortawesome/free-solid-svg-icons": "^5.12.0",
+        "@fortawesome/vue-fontawesome": "^0.1.9"
     }
 }
