--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
         "squizlabs/php_codesniffer": "^3.5",
         "vimeo/psalm": "^3.9",
         "orchestra/testbench": "^6.0",
-        "dillingham/nova-assertions": "^1.2"
+        "dillingham/nova-assertions": "^1.2",
+        "phpstan/phpstan": "^0.12.84"
     },
     "autoload": {
         "psr-4": {
