--- a/phpstan.neon
+++ b/phpstan.neon
@@ -4,3 +4,6 @@ parameters:
 		- src
 	ignoreErrors:
 	    - '#Class App\\Nova\\User not found\.#'
+	    -
+	        message: '#Access to an undefined property App\\Models\\Template\:\:\$[a-zA-Z0-9]+Components\.#'
+	        path: src/app/Models/Template.php
