--- a/phpstan.neon
+++ b/phpstan.neon
@@ -2,6 +2,8 @@ parameters:
 	level: 1
 	paths:
 		- src
+	excludePaths:
+	    - src/nova-components/*/vendor/*
 	ignoreErrors:
 	    - '#Class App\\Nova\\User not found\.#'
 	    -
