--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
         "vimeo/psalm": "^3.9",
         "orchestra/testbench": "^6.0",
         "dillingham/nova-assertions": "^1.2",
-        "phpstan/phpstan": "^0.12.84"
+        "nunomaduro/larastan": "^0.7.6"
     },
     "autoload": {
         "psr-4": {
@@ -76,6 +76,7 @@
     "extra": {
         "laravel": {
             "providers": [
+                "Nwidart\\Modules\\LaravelModulesServiceProvider",
                 "Webid\\Cms\\CmsServiceProvider",
                 "Webid\\GalleryItemField\\FieldServiceProvider",
                 "Webid\\ImageItemField\\FieldServiceProvider",
@@ -88,7 +89,6 @@
                 "Webid\\ServiceItemField\\FieldServiceProvider",
                 "Webid\\FieldItemField\\FieldServiceProvider",
                 "Webid\\PageUrlItemField\\FieldServiceProvider",
-                "Nwidart\\Modules\\LaravelModulesServiceProvider",
                 "Laravel\\Nova\\NovaServiceProvider",
                 "Webid\\PreviewItemField\\FieldServiceProvider",
                 "Webid\\ArticleCategoriesItemField\\FieldServiceProvider",
