--- a/phpstan.neon
+++ b/phpstan.neon
@@ -6,6 +6,7 @@ parameters:
 		- src
 	excludePaths:
 	    - src/nova-components/*/vendor/*
+	    - src/nova-components/*/tests/*
 	    - src/Modules/*/Database/*
 	    - src/Modules/*/Resources/*
 	    - src/Modules/*/Tests/*
@@ -15,13 +16,27 @@ parameters:
 	    - '#Parameter \#1 \$text of method Laravel\\Nova\\Fields\\Field::help\(\) expects string, array\|string\|null given\.#'
 	    - '#Parameter \#1 \$name of class Eminiarts\\Tabs\\Tabs constructor expects string, array\|string\|null given\.#'
 	    - '#Parameter \#1 \$label of method Whitecube\\NovaFlexibleContent\\Flexible::button\(\) expects string, array\|string\|null given#'
-	    -
-	        message: '#Access to an undefined property App\\Models\\Template\:\:\$[a-zA-Z0-9]+Components\.#'
-	        path: src/app/Models/Template.php
+	    - '#Parameter \#1 \$view of function view expects view\-string\|null, string given\.#'
+	    - '#Method Webid\\Cms\\App\\Nova\\Components\\.*::singularLabel\(\) should return string but returns array\|string\|null\.#'
+	    - '#Method Webid\\Cms\\App\\Nova\\Components\\.*::label\(\) should return string but returns array\|string\|null\.#'
+	    - '#Method Webid\\Cms\\Modules\\.*\\Nova\\.*::icon\(\) should return string but returns string\|false\.#'
+	    - '#Parameter \#1 \$text of method Laravel\\Nova\\Fields\\Field::placeholder\(\) expects string, array\|string\|null given#'
 	    -
 	        message: '#Possibly invalid array key type array\|string\|null\.#'
 	        paths:
 	            - src/Modules/*/Nova/*.php
 	            - src/app/Nova/Template.php
+	            - src/app/Nova/Popin/Popin.php
+	    -
+	        message: '#Access to an undefined property object::\$imageAsset\.#'
+	        paths:
+	            - src/Modules/Slideshow/Models/Slideshow.php
+	            - src/nova-components/ImageItemField/src/ImageItemField.php
+	    -
+	        message: '#Access to an undefined property object::\$.*\.#'
+	        path: src/app/Models/Menu/Menu.php
+	    -
+	        message: '#Result of && is always false\.#'
+	        path: src/app/Services/MenuBladeDirective/Menu.php
 	checkMissingIterableValueType: false
 
