Revert ":art: Use Safe"
This reverts commit 2e75c02a9c3e94a1d430c88caf6c6bb00b9f3a48.

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,6 +1,5 @@
 includes:
     - ./vendor/nunomaduro/larastan/extension.neon
-    - ./vendor/thecodingmachine/phpstan-safe-rule/phpstan-safe-rule.neon
 parameters:
 	level: 8
 	paths:
@@ -19,6 +18,7 @@ parameters:
 	    - '#Parameter \#1 \$view of function view expects view\-string\|null, string given\.#'
 	    - '#Method Webid\\Cms\\App\\Nova\\Components\\.*::singularLabel\(\) should return string but returns array\|string\|null\.#'
 	    - '#Method Webid\\Cms\\App\\Nova\\Components\\.*::label\(\) should return string but returns array\|string\|null\.#'
+	    - '#Method Webid\\Cms\\Modules\\.*\\Nova\\.*::icon\(\) should return string but returns string\|false\.#'
 	    - '#Parameter \#1 \$text of method Laravel\\Nova\\Fields\\Field::placeholder\(\) expects string, array\|string\|null given#'
 	    - '#Parameter \#1 \$view of method Illuminate\\Mail\\Mailable::view\(\) expects view-string, string given\.#'
 	    -
