--- a/composer.json
+++ b/composer.json
@@ -29,16 +29,14 @@
         "ext-json": "*",
         "spatie/laravel-sitemap": "^5.8",
         "nwidart/laravel-modules": "^8.0",
-        "symfony/polyfill-mbstring": "^1.20.0",
-        "thecodingmachine/safe": "^1.3"
+        "symfony/polyfill-mbstring": "^1.20.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5",
         "squizlabs/php_codesniffer": "^3.5",
         "orchestra/testbench": "^6.0",
         "dillingham/nova-assertions": "^1.2",
-        "nunomaduro/larastan": "^0.7.6",
-        "thecodingmachine/phpstan-safe-rule": "^1.0"
+        "nunomaduro/larastan": "^0.7.6"
     },
     "autoload": {
         "psr-4": {
