--- a/phpstan.neon
+++ b/phpstan.neon
@@ -18,9 +18,10 @@ parameters:
 	    - '#Parameter \#1 \$view of function view expects view\-string\|null, string given\.#'
 	    - '#Method Webid\\Cms\\App\\Nova\\Components\\.*::singularLabel\(\) should return string but returns array\|string\|null\.#'
 	    - '#Method Webid\\Cms\\App\\Nova\\Components\\.*::label\(\) should return string but returns array\|string\|null\.#'
-	    - '#Method Webid\\Cms\\Modules\\.*\\Nova\\.*::icon\(\) should return string but returns string\|false\.#'
+	    - '#Method Webid\\Cms\\Modules\\.*\\Nova\\.*::svgIcon\(\) should return string but returns string\|false\.#'
 	    - '#Parameter \#1 \$text of method Laravel\\Nova\\Fields\\Field::placeholder\(\) expects string, array\|string\|null given#'
 	    - '#Parameter \#1 \$view of method Illuminate\\Mail\\Mailable::view\(\) expects view-string, string given\.#'
+	    - '#Parameter \#1 \$view of function view expects view-string\|null, string\|null given\.#'
 	    -
 	        message: '#Possibly invalid array key type array\|string\|null\.#'
 	        paths:
