--- a/.github/workflows/cms-ci.yml
+++ b/.github/workflows/cms-ci.yml
@@ -7,7 +7,7 @@ jobs:
       fail-fast: true
       matrix:
         os: [ ubuntu-20.04 ]
-        php: [ 7.4, 8.0 ]
+        php: [ 7.4, 8.0, 8.1 ]
         laravel: [ 8.* ]
         stability: [ prefer-stable ]
         include:
