--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,8 @@
         "laravel/framework": "^9",
         "laravel/nova": "~2.0|~3.0",
         "whitecube/nova-flexible-content": "^0.2.0",
-        "infinety-es/nova-filemanager": "^2.6",
         "idf/nova-html-card": "^1.2",
-        "eminiarts/nova-tabs": "^1.4",
+        "eminiarts/nova-tabs": "1.3.*",
         "digital-creative/collapsible-resource-manager": "^1.2",
         "digital-creative/conditional-container": "^1.2",
         "epartment/nova-dependency-container": "^1.2",
@@ -33,7 +32,8 @@
         "spatie/laravel-translatable": "^6.0",
         "tightenco/ziggy": "^1.4",
         "spatie/laravel-sitemap": "^6.1",
-        "nwidart/laravel-modules": "8.2.*"
+        "nwidart/laravel-modules": "8.2.*",
+        "infinety-es/nova-filemanager": "^2.8"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5.10",
