--- a/.github/workflows/cms-ci.yml
+++ b/.github/workflows/cms-ci.yml
@@ -7,11 +7,11 @@ jobs:
       fail-fast: true
       matrix:
         os: [ ubuntu-20.04 ]
-        php: [ 7.4, 8.0, 8.1 ]
-        laravel: [ 8.* ]
+        php: [8.0, 8.1 ]
+        laravel: [ 9.* ]
         stability: [ prefer-stable ]
         include:
-          - laravel: 8.*
+          - laravel: 9.*
             testbench: ^6.6
 
     services:
