--- a/.github/workflows/cms-ci.yml
+++ b/.github/workflows/cms-ci.yml
@@ -7,12 +7,8 @@ jobs:
       fail-fast: true
       matrix:
         os: [ ubuntu-20.04 ]
-        php: [8.0, 8.1 ]
-        laravel: [ 9.* ]
+        php: [8.0]
         stability: [ prefer-stable ]
-        include:
-          - laravel: 9.*
-            testbench: ^6.6
 
     services:
       mysql:
