--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
         "tightenco/ziggy": "^1.4",
         "spatie/laravel-sitemap": "^6.1",
         "nwidart/laravel-modules": "8.2.*",
-        "infinety-es/nova-filemanager": "^2.8"
+        "webid/nova-filemanager": "^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5.10",
