--- a/composer.json
+++ b/composer.json
@@ -16,29 +16,29 @@
     "prefer-stable": true,
     "require": {
         "php": "^7.4|^8.0",
-        "laravel/framework": "^8.12",
+        "laravel/framework": "^9",
         "laravel/nova": "~2.0|~3.0",
         "whitecube/nova-flexible-content": "^0.2.0",
-        "spatie/laravel-translatable": "^4.2",
-        "infinety-es/nova-filemanager": "^2.6",
         "idf/nova-html-card": "^1.2",
+        "eminiarts/nova-tabs": "1.3.*",
         "digital-creative/collapsible-resource-manager": "^1.2",
         "digital-creative/conditional-container": "^1.2",
-        "eminiarts/nova-tabs": "1.3.*",
         "epartment/nova-dependency-container": "^1.2",
         "maatwebsite/laravel-nova-excel": "^1.1",
-        "tightenco/ziggy": "^0.9.3",
         "spatie/laravel-varnish": "^2.8",
-        "spatie/laravel-honeypot": "^3.0",
+        "spatie/laravel-honeypot": "^4.0",
         "ext-json": "*",
-        "spatie/laravel-sitemap": "^5.8",
-        "nwidart/laravel-modules": "^8.0",
-        "symfony/polyfill-mbstring": "^1.20.0"
+        "symfony/polyfill-mbstring": "^1.20.0",
+        "spatie/laravel-translatable": "^6.0",
+        "tightenco/ziggy": "^1.4",
+        "spatie/laravel-sitemap": "^6.1",
+        "nwidart/laravel-modules": "8.2.*",
+        "webid/nova-filemanager": "^3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.5",
+        "phpunit/phpunit": "^9.5.10",
         "squizlabs/php_codesniffer": "^3.5",
-        "orchestra/testbench": "^6.0",
+        "orchestra/testbench": "^7.4",
         "khaled-dev/nova-assertions": "^1.2",
         "nunomaduro/larastan": "^1.0.2"
     },
