--- a/src/nova-components/AdvancedUrlField/package.json
+++ b/src/nova-components/AdvancedUrlField/package.json
@@ -15,6 +15,8 @@
         "laravel-nova": "^1.0"
     },
     "dependencies": {
+        "@fortawesome/free-solid-svg-icons": "^6.1.1",
+        "@fortawesome/vue-fontawesome": "^2.0.6",
         "vue": "^2.5.0"
     }
 }
