--- a/.github/workflows/cms-ci.yml
+++ b/.github/workflows/cms-ci.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Installing PHP dependencies
         run: |
           composer config "http-basic.nova.laravel.com" "${{ secrets.NOVA_USERNAME }}" "${{ secrets.NOVA_PASSWORD }}"
-          composer update --${{ matrix.stability }} --prefer-dist --no-ansi --no-interaction --no-plugins --no-progress --no-scripts --optimize-autoloader
+          composer update --prefer-dist --no-ansi --no-interaction --no-plugins --no-progress --no-scripts --optimize-autoloader
 
       # Tests migrations
       - name: Testing migrations
