:construction_worker:  Fix Node.js 12 actions are deprecated

--- a/.github/workflows/cms-ci.yml
+++ b/.github/workflows/cms-ci.yml
@@ -15,6 +15,11 @@ jobs:
           tools: composer:v2
           coverage: none
 
+      - name: Setup NODE
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
       - uses: actions/checkout@v2
 
       # Preparing environment
