--- a/.github/workflows/cms-ci.yml
+++ b/.github/workflows/cms-ci.yml
@@ -35,10 +35,8 @@ jobs:
           restore-keys: ${{ runner.os }}-composer-
 
       - name: Starting MySQL
-        run: |
-          sudo systemctl start mysql.service
-          PRAGMA foreign_keys=1
-
+        run: sudo systemctl start mysql.service
+  
       - name: Installing PHP dependencies
         run: |
           composer config "http-basic.nova.laravel.com" "${{ secrets.NOVA_USERNAME }}" "${{ secrets.NOVA_PASSWORD }}"
