--- a/.github/workflows/cms-ci.yml
+++ b/.github/workflows/cms-ci.yml
@@ -7,7 +7,7 @@ jobs:
 
     services:
       mysql:
-        image: mysql:5.7
+        image: mariadb:10.5.8
         env:
           MYSQL_DATABASE: cms_test
           MYSQL_USER: cms_test
@@ -45,9 +45,6 @@ jobs:
           path: ${{ steps.composer-cache.outputs.dir }}
           key: ${{ runner.os }}-composer-cms
           restore-keys: ${{ runner.os }}-composer-
-
-      - name: Starting MySQL
-        run: sudo systemctl start mysql.service
   
       - name: Installing PHP dependencies
         run: |
@@ -58,6 +55,9 @@ jobs:
       - name: Testing migrations
         run: |
           ./vendor/bin/testbench migrate:fresh
+          ./vendor/bin/testbench migrate
+        env:
+          DB_PORT: 32574
 
       # Tests that just need composer dependencies
       - name: Running security checker
